# db-query-tool

./: .gitignore  CLAUDE.md  README.md
.claude/: settings.local.json
.specify/memory/: constitution.md
backend/: README.md  pyproject.toml
backend/src/: config.py  main.py
backend/src/api/: __init__.py
backend/src/api/v1/: __init__.py  dbs.py  llm.py
backend/src/models/: __init__.py  database.py  errors.py  llm.py  query.py
backend/src/services/: database.py  export.py  llm.py  metadata.py  query.py
backend/src/storage/: sqlite.py
docs/: design_summary.md  requirements_summary.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/playwright-report/: index.html
frontend/src/: App.vue  main.ts  style.css
frontend/src/components/: AddDatabaseDialog.vue  DatabaseList.vue  ExportDialog.vue  FieldEditor.vue  LlmModelSelector.vue  NaturalQueryInput.vue  QueryResult.vue  SqlEditor.vue  TableList.vue
frontend/src/pages/: HomePage.vue
frontend/src/services/: api.ts  types.ts
frontend/src/stores/: database.ts
frontend/tests/e2e/: app.spec.ts  screenshots.spec.ts
specify/: constitution.md  plan.md  specify.md
specs/001-db-query-tool/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-db-query-tool/checklists/: requirements.md
specs/001-db-query-tool/contracts/: openapi.yaml
